--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,14 @@
 AllCops:
   NewCops: enable
   TargetRubyVersion: 2.7
+
 Layout/LineLength:
   Enabled: 100
-
 Metrics/MethodLength:
   Exclude:
     # Test methods are long.
     - test/**/*_test.rb
+# The Specification class defines its own dig method and that must work with
+# a single argument.
+Style/SingleArgumentDig:
+  Enabled: false
