--- a/test/files/openapi/simple.yml
+++ b/test/files/openapi/simple.yml
@@ -6,6 +6,7 @@ info:
   description: It books!
 servers:
   - url: http://example.com/v1
+  - url: http://staging.example.com/v1
 tags:
   - name: books
     description: Book operations
