[Rubocop] Allow long test classes.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,10 @@ AllCops:
 
 Layout/LineLength:
   Enabled: 100
+Metrics/ClassLength:
+  Exclude:
+    # Test classes are long.
+    - test/**/*_test.rb
 Metrics/MethodLength:
   Max: 14
   Exclude:
