--- a/test/files/openapi/simple.yml
+++ b/test/files/openapi/simple.yml
@@ -65,6 +65,26 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /books/sample:
+    get:
+      summary: Fetch a random book
+      description: Fetch all details for a random book.
+      operationId: sampleBook
+      tags:
+        - books
+      responses:
+        '200':
+          description: A book.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Book"
+        default:
+          description: An error.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /search/books:
     get:
       summary: Find books
