[Rubocop] Using OpenStruct is fine.
I think I understand the warning in a certain context, but
it's kind of weird to say: don't use this class from the
standard library when there are valid uses for it.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,7 +14,9 @@ Metrics/MethodLength:
     - test/**/*_test.rb
 Style/AsciiComments:
   Enabled: false
-# The Specification class defines its own dig method and that must work with
-# a single argument.
+# We use OpenStruct exactly what it was created for; objects with schema on read.
+Style/OpenStructUse:
+  Enabled: false
+# The Specification class defines its own dig method and that must work with a single argument.
 Style/SingleArgumentDig:
   Enabled: false
