Support $ref as direct sibling for path.

--- a/test/files/openapi/external.yml
+++ b/test/files/openapi/external.yml
@@ -47,3 +47,5 @@ paths:
             application/json:
               schema:
                 $ref: "schemas/author.yml"
+  /authors:
+    $ref: "./paths/authors.yml#/paths/index"
